# llming

./: .gitignore  Cargo.toml  README.md  justfile
.tmp/: new.txt
crates/assistant/: Cargo.toml
crates/assistant/src/: client.rs  error.rs  lib.rs
crates/assistant/src/models/: mod.rs
crates/assistant/src/models/anthropic/: client.rs  mod.rs  streaming.rs  types.rs
crates/assistant/src/protocol/: handler.rs  mapping.rs  mod.rs
crates/assistant/tests/: test_anthropic.rs  test_client.rs  test_protocol.rs
crates/assistant/tests/common/: mod.rs
crates/conduit/: Cargo.toml
crates/conduit/src/: lib.rs
crates/context-forge/: Cargo.toml  README.md
crates/context-forge/examples/: tools_and_prompts.rs
crates/context-forge/src/: builder.rs  error.rs  handler.rs  lib.rs  logging.rs  progress.rs  roots.rs  server.rs
crates/context-forge/src/handlers/: mod.rs  prompts.rs  resources.rs  tools.rs
crates/context-forge/src/sampling/: handler.rs  mod.rs  test_sampler.rs
crates/context-forge/src/transport/: mod.rs  stdio.rs
crates/filesystem/: Cargo.toml
crates/filesystem/src/: error.rs  lib.rs  main.rs  security.rs  server.rs
crates/filesystem/src/tools/: allowed.rs  directory.rs  edit.rs  info.rs  mod.rs  move_files.rs  read.rs  search.rs  write.rs
crates/hyperax/: Cargo.toml
crates/hyperax/src/: client.rs  export.rs  lib.rs  server.rs
crates/hyperax/src/client/: mod.rs
crates/hyperax/src/common/: mod.rs  parser.rs
crates/hyperax/src/common/parser/: mod.rs
crates/hyperax/src/server/: mod.rs
crates/hyperax/tests/: basic.rs
crates/hyperaxe/: Cargo.toml
crates/hyperaxe/src/: client.rs  lib.rs  server.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: client.rs  error.rs  lib.rs  server.rs  server_impl.rs
crates/mcp/src/protocol/: common.rs  constants.rs  mod.rs
crates/mcp/src/protocol/messages/: completion.rs  control.rs  initialize.rs  logging.rs  mod.rs  prompts.rs  resources.rs  roots.rs  sampling.rs  tools.rs
crates/mcp/src/transport/: http.rs  mod.rs  stdio.rs  ws.rs
crates/mcp/tests/: client_tests.rs
crates/prompt_toolkit/: Cargo.toml
crates/prompt_toolkit/src/: builder.rs  context.rs  lib.rs  template.rs  tests.rs  tools.rs  utils.rs
crates/utils/: Cargo.toml
crates/utils/src/: lib.rs
i18n/en/: llming.ftl  llming_cosmic.ftl
resources/: app.desktop  app.metainfo.xml
src/: app.rs  config.rs  main.rs
src/app/: stream_subscription.rs
src/app_config/: app_config.rs  mod.rs
src/http/: client.rs  mod.rs  server.rs
src/llm/: fs.rs  llm.rs  llm_fs.rs  mod.rs
src/llm/models/: anthropic.rs  deepseek.rs  mod.rs  model.rs
src/mcp/: client.rs  filesystem.rs  mod.rs  server.rs
src/mcp/servers/: filesystem.rs
src/prompts/: system.txt
