[package]
name = "assistant"
version = "0.1.0"
edition = "2021"

[dependencies]
hyperax = { path = "../hyperax" }
mcp = { path = "../mcp" }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
futures = "0.3"
async-trait = "0.1"
tracing = "0.1"

[dev-dependencies]
tokio-test = "0.4"
test-log = "0.2"
pretty_assertions = "1.0"