[package]
name = "context-forge"
version = "0.1.0"
edition = "2021"
authors = ["waffles"]
description = "A toolkit for building Model Context Protocol (MCP) servers"
license = "MIT"

[dependencies]
mcp-schema = { path = "../mcp-schema" }
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }
