[package]
name = "filesystem"
version = "0.1.0"
edition = "2021"

[dependencies]
mcp = { path = "../mcp" }
hyperax = { path = "../hyperax" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
similar = "2.0"
tokio-stream = "0.1"
async-trait = "0.1"
tracing = "0.1"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
