[package]
name = "hyperax"
version = "0.1.0"
edition = "2021"

[features]
default = []
integration_test = []

[dependencies]
tokio = { version = "1.36", features = ["full"] }
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
bytes = "1.5"
pin-project-lite = "0.2"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
httparse = "1.9"

[dev-dependencies]
tokio-test = "0.4"
http = "1.0"

# [[bin]]
# name = "llming"
# path = "./src/server.rs"
