[package]
name = "hyperaxe"
version = "0.1.0"
edition = "2021"
description = "Basic HTTP client and server using the hyper lib"

[dependencies]
anyhow = "1.0"
bytes = "1.0"
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1.3", features = ["tokio"] }
hyper-tls = "0.6.0"
http-body-util = "0.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tokio = { version = "1.0", features = ["full"] }
