[package]
name = "mcp"
version = "0.1.0"
edition = "2021"
description = "Model Context Protocol implementation in Rust"
license = "MIT"

[dependencies]
hyperaxe = { path = "../hyperaxe" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
rand = "0.8"
async-stream = "0.3"
uuid = { version = "1.0", features = ["v4", "serde"] }

[dev-dependencies]
tokio-test = "0.4"
