[package]
name = "mcp"
version = "0.1.0"
edition = "2021"
description = "Model Context Protocol implementation in Rust"
license = "MIT"

[dependencies]
hyperax = { path = "../hyperax" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
rand = "0.8"
async-stream = "0.3"
uuid = { version = "1.0", features = ["v4", "serde"] }
http = "1.0"
bytes = "1.5"
http-body-util = "0.1"

[dev-dependencies]
tokio-test = "0.4"