[package]
name = "prompt_toolkit"
version = "0.1.0"
edition = "2021"
description = "Dynamic prompt generation based on MCP server tools"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
lazy_static = "1.4"
regex = "1.8"
